# Atlantis-Little-Helper

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.in  README.md  _release.bat  aclocal.m4  ah.dsp  ah.dsw  ah.rc  ah25.cpp  ah25.h  ahapp.cpp  ahapp.h  ahframe.cpp  ahframe.h  atlaparser.cpp  atlaparser.h  bool.h  cfgfile.cpp  cfgfile.h  collection.cpp  collection.h  compat.h  config.h  config.h.in  configure  configure.in  consts.h  consts_ah.cpp  consts_ah.h  consts_ah.inc  cstr.cpp  cstr.h  data.cpp  data.h  editpane.cpp  editpane.h  editsframe.cpp  (+46 more)
bitmaps/: ALH.icns  centerout.xpm  findhex.xpm  icon_logo.xpm  lastturn.xpm  lastvisitturn.xpm  nextturn.xpm  planedwn.xpm  planeup.xpm  prevturn.xpm  prevzoom.xpm  showcoord.xpm  shownames.xpm  zoomin.xpm  zoomout.xpm
doc/: _bugs.txt  _todo.txt  history.txt  readme.html  readme_bin.txt
s/: build
terrain_bitmaps/: readme.txt
